# discord-ai-bot

./: .gitignore  Dockerfile  README.md  bot.py  compose.yml  google_api_testing.py  main.py  pyproject.toml  requirements.txt
