[project]
name = "discord-siffusion-bot"
version = "0.1.0"
description = "A Discord bot for diffusion"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Henrik Lindgren", email = "lindgrenhenrik96@gmail.com" }]
dependencies = [
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "astroid==2.15.5",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "dill==0.3.6",
    "discord==2.2.3",
    "discord.py==2.2.3",
    "docker==6.1.3",
    "frozenlist==1.3.3",
    "idna==3.4",
    "isort==5.12.0",
    "lazy-object-proxy==1.9.0",
    "mccabe==0.7.0",
    "multidict==6.0.4",
    "openai==0.27.7",
    "packaging==23.1",
    "platformdirs==3.5.1",
    "pylint==2.17.4",
    "python-dotenv==1.0.0",
    "requests==2.30.0",
    "tomli==2.0.1",
    "tomlkit==0.11.8",
    "tqdm==4.65.0",
    "typing_extensions",
    "urllib3==2.0.2",
    "websocket-client==1.6.1",
    "wrapt==1.15.0",
    "yarl==1.9.2",
    "google",
    "google-auth",
    "google-genai",
]
[tool.setuptools]
py-modules = ["main"]
